2002-12-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-x-face-alist): New.

2002-12-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-e21.el (w3m-favicon-type): Change default value and type of
	custom.
	(w3m-favicon-type-alist): New internal variable.
	(w3m-setup-favicon): Don't check 'xpm.
	(w3m-buffer-favicon): Decide image type of Emacs use
	`w3m-favicon-type-alist'.

2002-12-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-type): Suppert `stable version notation' of
	w3m-m17n.

2002-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-get-headers): Remove garbages.

2002-12-07  YAMASHITA Junji  <ysjj@unixuser.org>

	* shimbun/sb-ibm-dev.el (shimbun-get-headers): Follow the change
	of date format.

2002-11-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-header-line-map): Prevent tool-bar from being
	doubled under Emacs 21.

2002-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search-engine-alist): Specify coding-system
	for the waei and kokugo entries.  Suggested by Hideyuki SHIRAI.

2002-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-tabmenu.el (w3m-tab-menubar-update): Do nothing when there's
	no menubar.

2002-11-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-use-unseen): Remove
	duplicate definition.
	(mew-shimbun-unseen-regex): New inline macro.
	(mew-shimbun-goto-folder, mew-shimbun-unseen-remove-advice): Use
	`mew-shimbun-unseen-regex' macro.

2002-11-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-view-this-url-1): Keep position when new-session
	and `w3m-view-this-url-new-session-in-background' is non-nil.

2002-11-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-mime-text/html-w3m): Remove any properties of
	`xref'.

2002-11-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Use an optional argument and the function
	`interactive' to examine whether it is called interactively