@@ -1,3 +1,7 @@
+2002-12-19  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m.el (w3m-local-dirlist-cgi): Treat a local cookie.
+
 2002-12-18  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shimbun/sb-yomiuri.el (shimbun-yomiuri-x-face-alist): New.
